--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "node_js_basics",
+  "name": "unittests_in_js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "author": "EL Abassi Abderrazaq",
   "scripts": {
     "lint": "../node_modules/.bin/eslint",
-    "check-lint": "lint [0-9]*.js",
-    "test": "../node_modules/mocha/bin/mocha --require babel-register --exit",
+    "lint-all": "../node_modules/.bin/eslint [0-9]*.js",
+    "lint-fix-all": "../node_modules/.bin/eslint --fix [0-9]*.js",
+    "test": "node ../node_modules/mocha/bin/mocha --require babel-register --exit",
     "dev": "nodemon --exec babel-node --presets babel-preset-env ./full_server/server.js ./database.csv"
   },
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "chai-http": "^4.3.0",
