--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "author": "EL Abassi Abderrazaq",
   "scripts": {
-    "lint": "../node_modules/.bin/eslint",
-    "lint-all": "../node_modules/.bin/eslint [0-9]*.js",
-    "lint-fix-all": "../node_modules/.bin/eslint --fix [0-9]*.js",
-    "test": "node ../node_modules/mocha/bin/mocha --require babel-register --exit",
+    "lint": "./node_modules/.bin/eslint",
+    "lint-all": "./node_modules/.bin/eslint [0-9]*.js",
+    "lint-fix-all": "./node_modules/.bin/eslint --fix [0-9]*.js",
+    "test": "node ./node_modules/mocha/bin/mocha --require babel-register --exit",
     "dev": "nodemon --exec babel-node --presets babel-preset-env ./full_server/server.js ./database.csv"
   },
   "license": "ISC",
